deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: celobat
  name: celobat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celobat
  template:
    metadata:
      labels:
        app: celobat
    spec:
      volumes:
        - name: celobat-data
          persistentVolumeClaim: { claimName: pvc-celobat }
      containers:
        - image: simonloudev/celobat:latest
          imagePullPolicy: "Always"
          name: mailhog
          ports:
            - containerPort: 80
          startupProbe: &probe
            httpGet:
              port: 80
          readinessProbe: *probe
          livenessProbe: *probe
          volumeMounts:
            - mountPath: /usr/share/nginx/
              name: celobat-data
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: celobat
  name: celobat
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: celobat
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: celobat
spec:
  rules:
    - host: celobat.simon-lou.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: celobat
                port:
                  number: 80
  tls:
    - hosts:
        - "celobat.simon-lou.com"
      secretName: simon-lou-prod-tls
